# devenv

./: README.md
cpp/: Dockerfile  Dockerfile.alpine
flask/: .gitignore  Dockerfile  docker-compose.yml
flask/work/: pyproject.toml
go/: .gitignore  .vimrc  Dockerfile  docker-compose.yml
jupyter/: .gitignore  README.md  docker-compose.yml
jupyter/work/: pyproject.toml
latex/: .latexmkrc  Dockerfile  docker-compose.yml  main.tex
python/: Dockerfile
